syntax = "proto3";

service UserService {
    rpc getAllUser (Empty) returns (UserList) {}
    rpc getUser (UserRequest) returns (UserResponse) {}
    rpc CreateUser (UserDetails) returns (UserResponse) {}
}
message UserDetails {
    string name = 2;
    string email = 3;
    string password = 4;
}
message UserResponse {
    string _id = 1;
    string name = 2;
    string email = 3;
}
message UserRequest {
    string id = 1;
}
message Empty {

}

message UserList {
    repeated UserResponse users = 1;
}

